# pattern

./: .pre-commit-hooks.yaml  404.html  README.md  cookiecutter.json  index.html  mkdocs.yml  noxfile.py  pyproject.toml  sitemap.xml
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/workflows/: pull-request.yml
cli/: index.html
configuration/: index.html
cruft/: index.html
css/: extras.css
docs/: cli.md  configuration.md  cruft.md  documentation.md  github.md  home.md  index.md  installation.md  license.md  pypi.md  testing.md
docs/css/: extra.css  extras.css
docs/setup_guide/: cli.md  configuration.md  cruft.md  documentation.md  github.md  installation.md  pypi.md  testing.md
documentation/: index.html
github/: index.html
hooks/: post_gen_project.py
installation/: index.html
license/: index.html
pypi/: index.html
search/: search_index.json
testing/: index.html
tests/: __init__.py  bake-opt.json  bake.json  bake.yml  config.py  replay-min.json  replay.json  test_alt_bake.py  test_bake.py  test_cookiecutter.py  utils.py
{{cookiecutter.__clean_name}}/: .dockerignore  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  noxfile.py  pyproject.toml
{{cookiecutter.__clean_name}}/.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
{{cookiecutter.__clean_name}}/.github/ISSUE_TEMPLATE/: config.yml  documentation.md  general_report.md
{{cookiecutter.__clean_name}}/.github/workflows/: pull-request-title.yml  pull-request.yml  pypi-publish.yml  release-publish.yml  semantic.yml
{{cookiecutter.__clean_name}}/docs/: gen_ref_pages.py  index.md
{{cookiecutter.__clean_name}}/src/{{cookiecutter.__clean_slug}}/: __init__.py  {{cookiecutter.__clean_slug}}.py
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml  {% if cookiecutter.include_changelog== 'y' -%}CHANGELOG.md{%- endif %}  {% if cookiecutter.include_docs== 'y' -%} mkdocs.yml {%- endif %}
{{cookiecutter.project_name}}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
{{cookiecutter.project_name}}/.github/workflows/: gh-pages.yml
{{cookiecutter.project_name}}/docs/: contributing.md  examples.md  gen_ref_pages.py  index.md  license.md
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_name}}/{% if cookiecutter.include_docs== 'y' -%}docs{%- endif %}/: license.md
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.py
