[project]
name = "pattern"
version = "2.1.0"
description = "Pattern - A modern, opinionated, cookiecutter template for your next Python project."
authors = [{ name = "Wyatt Ferguson", email = "wyattxdev@duck.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ['cookiecutter', 'template', 'uv', 'python', 'project', 'generator', 'pattern']
requires-python = ">=3.11,<4"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
  "cookiecutter>=2.1.1"
]

[dependency-groups]
dev = [
    "nox>=2025.5.1",
    "mypy >=1.16.1",
    "pytest>=8.4.1",
    "pytest-cookies>=0.7.0",
    "ruff>=0.12.0",
    "taskipy>=1.14.1",
    "toml>=0.10.2",
    "types-toml>=0.10.8.20240310",
    "mkdocs>=1.3.1",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "pymdown-extensions>=10.15",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-github-admonitions-plugin>=0.1.1",
    "cffconvert>=2.0.0",
]

[project.urls]
Repository = "https://github.com/wyattferguson/pattern"
Documentation = "https://wyattferguson.github.io/pattern"
Issues = "https://github.com/wyattferguson/pattern/issues"

[tool.taskipy.tasks]
format = { cmd = "ruff format ./src/", help = "Format code using ruff" }
lint = { cmd = "ruff check --fix ./src/", help = "Lint code using ruff" }
type = { cmd = "mypy --strict ./tests/", help = "Typecheck code using mypy" }
tests = { cmd = "pytest --color=yes tests", help = "Run all tests using pytest" }
nox = { cmd = "nox -s tests", help = "Run tests in a nox session" }
docs = { cmd = "mkdocs build", help = "Build documentation using mkdocs" }
serve = { cmd = "mkdocs serve", help = "Serve documentation using mkdocs" }
publish = { cmd = "mkdocs gh-deploy", help = "Publish documentation to GitHub Pages" }

[tool.ruff]
line-length = 100
indent-width = 4
format.indent-style = "space"
target-version = "py313"
src = ["tests","hooks"]

[tool.ruff.lint]
pydocstyle.convention = "google"
fixable = ["ALL"]
select = ["ALL"]
ignore = [
    "FA102", # Flake8-future-annotations
    "F401", # Disable fix for unused imports
    "B904", # Allow raising exceptions without from e
    "PLR0913", # too many arguments
    "CPY", # Flake8-copyright
    "T201", # Debugging print statements
    "ERA", # Eradicate – detects commented-out code
    "BLE001", # Catch-all exceptions
    "D100", # missing docstring in public module
    "D105", # undocumented magic method
    "D107", # undocumented public init
    "D203", # incorrect-blank-line-before-class
    "D205", # line-between-summary-and-description
    "D212", # multi-line-summary-first-line
    "D407", # missing-dashed-underline-after-section
    "S311", # rand-usage
]

[tool.mypy]
files = ["tests","hooks"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
