
[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["python"]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
]

[dependency-groups]
dev = [
    "ty>=0.0.1a8",
    {% if cookiecutter.include_tests == 'y' -%}
    "pytest>=8.3.4",
    "coverage>=7.8.2",
    {% endif %}
    "ruff>=0.9.8",
    "taskipy>=1.14.1",
    {% if cookiecutter.include_docs == 'y' -%}
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    {% endif %}
]

[project.urls]
homepage = "https://github.com/{{cookiecutter.github}}/{{cookiecutter.project_slug}}"
repository = "https://github.com/{{cookiecutter.github}}/{{cookiecutter.project_slug}}.git"
{% if cookiecutter.include_docs == 'y' -%}
documentation = "https://{{cookiecutter.github}}.github.io/{{cookiecutter.project_slug}}"
{% else %}
documentation = "https://github.com/{{cookiecutter.github}}/{{cookiecutter.project_slug}}"
{% endif %}
issues = "https://github.com/{{cookiecutter.github}}/{{cookiecutter.project_slug}}/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.taskipy.tasks]
format = "ruff format ./src/"
lint = "ruff check --fix ./src/"
typecheck = "ty check"
{% if cookiecutter.include_docs == 'y' -%}
docs = "mkdocs build & task serve"
serve = "mkdocs serve"
doc_deploy = "mkdocs gh-deploy --force"
{% endif %}
{% if cookiecutter.include_tests == 'y' -%}
tests = "pytest --verbose --color=yes tests"
coverage = "coverage html && coverage report -m"
{% endif %}
run = "uv run ./src/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}.py"

[tool.ruff]
line-length = 100
indent-width = 4
format.indent-style = "space"
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
pydocstyle.convention = "google"
fixable = ["ALL"]
select = ["ALL"]
ignore = [
    "FA102", # Flake8-future-annotations
    "F401", # Disable fix for unused imports
    "B904", # Allow raising exceptions without from e
    "PLR0913", # too many arguments
    "CPY", # Flake8-copyright
    "T201", # Debugging print statements
    "ERA", # Eradicate – detects commented-out code
    "BLE001", # Catch-all exceptions
    "D105", # undocumented magic method
    "D107", # undocumented public init
    "D203", # incorrect-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D400", # missing-trailing-period
    "D407", # missing-dashed-underline-after-section
]

[tool.ty]
src.root = "./src"
environment.python = "./.venv"
terminal.output-format = "concise"

[tool.coverage.paths]
source = ["src"]
tests = ["tests"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src", "tests"]